--- a/src/app/layouts/app-header/app-header.component.html
+++ b/src/app/layouts/app-header/app-header.component.html
@@ -9,18 +9,22 @@
             <img src="./assets/img/admin-avatar.png"/>
         </span> -->
     </a>
+
+    <a class="nav-link sidebar-toggler js-sidebar-toggler">
+        <i class="ti-menu"></i>
+    </a>
 </div>
 
 <div class="flexbox flex-1">
     <!-- START TOP-LEFT TOOLBAR-->
     <ul class="nav navbar-toolbar">
         <li>
-            <a class="nav-link sidebar-toggler js-sidebar-toggler">
+            <!-- <a class="nav-link sidebar-toggler js-sidebar-toggler">
                 <i class="ti-menu"></i>
-            </a>
+            </a> -->
         </li>
         <li>
-            <h4 class="h4 pt-2">School Management System</h4>
+            <h4 class="h4 pt-2 ml-4">School Management System</h4>
         </li>
     </ul>
     <!-- END TOP-LEFT TOOLBAR-->
