--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -56,16 +56,23 @@
                 </div>
         </div>
     </div>
-    <!-- <div class="row">
-        <div class="col-lg-8">
+
+
+
+
+    <div class="row">
+
+
+
+        <div class="col-lg-6">
             <div class="ibox">
                 <div class="ibox-body">
-                    <div class="flexbox mb-4">
-                        <div>
+                    <!-- <div class="flexbox mb-4"> -->
+                        <!-- <div>
                             <h3 class="m-0">Statistics</h3>
                             <div>Your shop sales analytics</div>
-                        </div>
-                        <div class="d-inline-flex">
+                        </div> -->
+                        <!-- <div class="d-inline-flex">
                             <div class="px-3" style="border-right: 1px solid rgba(0,0,0,.1);">
                                 <div class="text-muted">WEEKLY INCOME</div>
                                 <div>
@@ -80,45 +87,60 @@
                                     <span class="text-warning ml-2"><i class="fa fa-level-down"></i> -12%</span>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
+                    <!-- </div> -->
+                    <div class="ibox-head">
+                        <div class="ibox-title">Fees Collection & Expenses</div>
                     </div>
                     <div>
-                        <canvas id="bar_chart" style="height:260px;"></canvas>
+                        <canvas id="collection_chart" style="height:250px;"></canvas>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-lg-4">
-            <div class="ibox">
-                <div class="ibox-head">
-                    <div class="ibox-title">Statistics</div>
-                </div>
-                <div class="ibox-body">
-                    <div class="row align-items-center">
-                        <div class="col-md-6">
-                            <canvas id="doughnut_chart" style="height:160px;"></canvas>
+
+
+
+
+        <div class="col-lg-6">
+                <div class="ibox">
+                    <div class="ibox-body">
+                        <!-- <div class="flexbox mb-4"> -->
+                            <!-- <div>
+                                <h3 class="m-0">Statistics</h3>
+                                <div>Your shop sales analytics</div>
+                            </div> -->
+                            <!-- <div class="d-inline-flex">
+                                <div class="px-3" style="border-right: 1px solid rgba(0,0,0,.1);">
+                                    <div class="text-muted">WEEKLY INCOME</div>
+                                    <div>
+                                        <span class="h2 m-0">$850</span>
+                                        <span class="text-success ml-2"><i class="fa fa-level-up"></i> +25%</span>
+                                    </div>
+                                </div>
+                                <div class="px-3">
+                                    <div class="text-muted">WEEKLY SALES</div>
+                                    <div>
+                                        <span class="h2 m-0">240</span>
+                                        <span class="text-warning ml-2"><i class="fa fa-level-down"></i> -12%</span>
+                                    </div>
+                                </div>
+                            </div> -->
+                        <!-- </div> -->
+                        <div class="ibox-head">
+                            <div class="ibox-title">Students Chart</div>
                         </div>
-                        <div class="col-md-6">
-                            <div class="m-b-20 text-success"><i class="fa fa-circle-o m-r-10"></i>Desktop 52%</div>
-                            <div class="m-b-20 text-info"><i class="fa fa-circle-o m-r-10"></i>Tablet 27%</div>
-                            <div class="m-b-20 text-warning"><i class="fa fa-circle-o m-r-10"></i>Mobile 21%</div>
+                        <div>
+                            <canvas id="student_chart" style="height:250px;"></canvas>
                         </div>
                     </div>
-                    <ul class="list-group list-group-divider list-group-full">
-                        <li class="list-group-item">Chrome
-                            <span class="float-right text-success"><i class="fa fa-caret-up"></i> 24%</span>
-                        </li>
-                        <li class="list-group-item">Firefox
-                            <span class="float-right text-success"><i class="fa fa-caret-up"></i> 12%</span>
-                        </li>
-                        <li class="list-group-item">Opera
-                            <span class="float-right text-danger"><i class="fa fa-caret-down"></i> 4%</span>
-                        </li>
-                    </ul>
                 </div>
             </div>
-        </div>
-    </div> -->
+    </div>
+    
+    
+    
+    
     <!-- <div class="row">
         <div class="col-lg-8">
             <div class="ibox">
@@ -510,6 +532,8 @@
             </div>
         </div>
     </div> -->
+
+
     <style>
         .visitors-table tbody tr td:last-child {
             display: flex;
