--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -18,64 +18,65 @@
         <!-- <li class="heading">FEATURES</li> -->
 
         <li routerLinkActive="active">
-            <a href="javascript:;">
+            <a href="javascript:;" aria-expanded="false">
                 <i class="sidebar-item-icon fa fa-bookmark"></i>
                 <span class="nav-label">Enrollment</span>
-                <i class="fa fa-angle-left arrow"></i>
+                <i class="fa fa-angle-right arrow"></i>
             </a>
-            <ul class="nav-2-level" routerLinkActive="in">
+            <ul class="nav-2-level collapse" routerLinkActive="in" aria-expanded="false">
                 <li>
                     <a routerLink="" routerLinkActive="active">
-                        <span><i class="ti-angle-right"></i></span>
+                        <span class="submenu-arrow"><i class="ti-angle-right"></i></span>
                         Student Admission
                     </a>
                 </li>
                 <li>
                     <a routerLink="" routerLinkActive="active">
-                        <span><i class="ti-angle-right"></i></span>
+                        <span class="submenu-arrow"><i class="ti-angle-right"></i></span>
                         Bulk Upload</a>
                 </li>
                 <li>
-                    <a routerLink="" routerLinkActive="active"><span><i class="ti-angle-right"></i></span>User Registration</a>
+                    <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>User Registration</a>
                 </li>
                 <li>
-                    <a routerLink="" routerLinkActive="active"><span><i class="ti-angle-right"></i></span>Admission Enquery</a>
+                    <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Admission Enquery</a>
                 </li>
             </ul>
         </li>
         <li routerLinkActive="active">
             <a href="javascript:;"><i class="sidebar-item-icon fa fa-edit"></i>
-                <span class="nav-label">Fee Management</span><i class="fa fa-angle-left arrow"></i></a>
+                <span class="nav-label">Fee Management</span><i class="fa fa-angle-right arrow"></i>
+            </a>
         </li>
         <li routerLinkActive="active">
             <a href="javascript:;"><i class="sidebar-item-icon fa fa-table"></i>
-                <span class="nav-label">Student Management</span><i class="fa fa-angle-left arrow"></i></a>
+                <span class="nav-label">Student Management</span><i class="fa fa-angle-right arrow"></i></a>
                 <ul class="nav-2-level" routerLinkActive="in">
                     <li>
-                        <a routerLink="" routerLinkActive="active"><span><i class="ti-angle-right"></i></span>Update Student</a>
+                        <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Update Student</a>
                     </li>
                     <li>
-                        <a routerLink="" routerLinkActive="active"><span><i class="ti-angle-right"></i></span>View Student</a>
+                        <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>View Student</a>
                     </li>
                     <li>
-                        <a routerLink="" routerLinkActive="active"><span><i class="ti-angle-right"></i></span>Roll No Assign</a>
+                        <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Roll No Assign</a>
                     </li>
                     <li>
-                        <a routerLink="" routerLinkActive="active"><span><i class="ti-angle-right"></i></span>Attandance Report</a>
+                        <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Attandance Report</a>
                     </li>
                     <li>
-                        <a routerLink="" routerLinkActive="active"><span><i class="ti-angle-right"></i></span>View Time Table</a>
+                        <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>View Time Table</a>
                     </li>
                 </ul>
         </li>
         <li routerLinkActive="active">
             <a href="javascript:;"><i class="sidebar-item-icon fa fa-bar-chart"></i>
-                <span class="nav-label">Teacher Activities</span><i class="fa fa-angle-left arrow"></i>
+                <span class="nav-label">Teacher Activities</span><i class="fa fa-angle-right arrow"></i>
             </a>
         </li>
         <li routerLinkActive="active">
             <a href="javascript:;"><i class="sidebar-item-icon fa fa-map"></i>
-                <span class="nav-label">Examination Management</span><i class="fa fa-angle-left arrow"></i></a>
+                <span class="nav-label">Examination Management</span><i class="fa fa-angle-right arrow"></i></a>
         </li>
         <li>
             <a routerLink="/ui/icons" routerLinkActive="active"><i class="sidebar-item-icon fa fa-smile-o"></i>
@@ -85,7 +86,7 @@
         <!-- <li class="heading">PAGES</li> -->
         <li routerLinkActive="active">
             <a href="javascript:;"><i class="sidebar-item-icon fa fa-envelope"></i>
-                <span class="nav-label">Notifications & Events</span><i class="fa fa-angle-left arrow"></i>
+                <span class="nav-label">Notifications & Events</span><i class="fa fa-angle-right arrow"></i>
             </a>
         </li>
         <li>
@@ -95,17 +96,17 @@
         </li>
         <li routerLinkActive="active">
             <a href="javascript:;"><i class="sidebar-item-icon fa fa-file-text"></i>
-                <span class="nav-label">Finance Management</span><i class="fa fa-angle-left arrow"></i>
+                <span class="nav-label">Finance Management</span><i class="fa fa-angle-right arrow"></i>
             </a>
         </li>
         <li>
             <a href="javascript:;"><i class="sidebar-item-icon fa fa-sitemap"></i>
-                <span class="nav-label">Leave Management</span><i class="fa fa-angle-left arrow"></i>
+                <span class="nav-label">Leave Management</span><i class="fa fa-angle-right arrow"></i>
             </a>
         </li>
         <li>
             <a href="javascript:;"><i class="sidebar-item-icon fa fa-sitemap"></i>
-                <span class="nav-label">Certificates Management</span><i class="fa fa-angle-left arrow"></i>
+                <span class="nav-label">Certificates Management</span><i class="fa fa-angle-right arrow"></i>
             </a>
         </li>
     </ul>
