recent activity, notice and login complete

--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -1,4 +1,12 @@
-
+.cover-image {
+	display: flex; 
+	align-items: center; 
+	justify-content: center; 
+	height: 100%;  
+	background: url('../../../assets/img/login-back.jpg') no-repeat; 
+	background-position: center; 
+	background-size: cover;
+}
 .brand {
 	font-size: 44px;
     text-align: center;
