--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
-<div class="content">
+<div class="content cover-image">
     <div class="brand">
-        <a class="link" routerLink="/index">AdminCAST</a>
+        <!-- <a class="link" routerLink="/index">AdminCAST</a> -->
     </div>
     <form id="login-form" action="javascript:;" method="post">
         <h2 class="login-title">Log in</h2>
@@ -25,7 +25,7 @@
         <div class="form-group">
             <button class="btn btn-info btn-block" type="submit">Login</button>
         </div>
-        <div class="social-auth-hr">
+        <!-- <div class="social-auth-hr">
             <span>Or login with</span>
         </div>
         <div class="text-center social-auth m-b-20">
@@ -34,7 +34,7 @@
             <a class="btn btn-social-icon btn-google m-r-5" href="javascript:;"><i class="fa fa-google-plus"></i></a>
             <a class="btn btn-social-icon btn-linkedin m-r-5" href="javascript:;"><i class="fa fa-linkedin"></i></a>
             <a class="btn btn-social-icon btn-vk" href="javascript:;"><i class="fa fa-vk"></i></a>
-        </div>
+        </div> -->
         <div class="text-center">Not a member?
             <a class="color-blue" routerLink="/register">Create accaunt</a>
         </div>
