--- a/src/app/layouts/app-header/app-header.component.html
+++ b/src/app/layouts/app-header/app-header.component.html
@@ -163,7 +163,7 @@
                 <a class="dropdown-item" href="profile.html"><i class="fa fa-cog"></i>Settings</a>
                 <!-- <a class="dropdown-item" href="javascript:;"><i class="fa fa-support"></i>Support</a> -->
                 <li class="dropdown-divider"></li>
-                <a class="dropdown-item" href="login.html"><i class="fa fa-power-off"></i>Logout</a>
+                <a class="dropdown-item" [routerLink]="['/login']"><i class="fa fa-power-off"></i>Logout</a>
             </ul>
         </li>
     </ul>
