--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -92,7 +92,7 @@
                     <div class="ibox-head">
                         <div class="ibox-title">Fees Collection & Expenses</div>
                     </div>
-                    <div>
+                    <div class="mt-3">
                         <canvas id="collection_chart" style="height:250px;"></canvas>
                     </div>
                 </div>
@@ -130,11 +130,108 @@
                         <div class="ibox-head">
                             <div class="ibox-title">Students Chart</div>
                         </div>
-                        <div>
+                        <div class="mt-3">
                             <canvas id="student_chart" style="height:250px;"></canvas>
                         </div>
                     </div>
                 </div>
+            </div>
+
+
+
+
+            <div class="col-lg-6">
+                    <div class="ibox">                        
+                        <div class="ibox-head">
+                            <div class="ibox-title">Calender Events</div>
+                        </div>
+                        <div class="ibox-body">
+                            
+                        </div>                       
+                    </div>
+            </div>
+
+
+
+
+            <div class="col-lg-6">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="ibox">
+                            <div class="ibox-head">
+                                <div class="ibox-title">Notice Board</div>
+                            </div>
+                            <div class="ibox-body">
+                                <div class="list-group">
+                                    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+                                        <div class="d-flex w-100 justify-content-between">
+                                            <h6 class="mb-1 h6 text-primary">John Doe</h6>
+                                            <small class="text-muted">3 days ago</small>
+                                        </div>
+                                        <p class="mb-1 notice-st text-secondary">Maecenas sed diam eget risus varius blandit.                                            
+                                        </p>
+                                        <!-- <small>Donec id elit non mi porta.</small> -->
+                                    </a>
+
+                                    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+                                            <div class="d-flex w-100 justify-content-between">
+                                                <h6 class="mb-1 h6 text-primary">Kelly Margret</h6>
+                                                <small class="text-muted">6 days ago</small>
+                                            </div>
+                                            <p class="mb-1 notice-st text-secondary">Maecenas sed diam eget risus varius blandit.                                            
+                                            </p>
+                                            <!-- <small>Donec id elit non mi porta.</small> -->
+                                    </a>
+
+                                    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+                                            <div class="d-flex w-100 justify-content-between">
+                                                <h6 class="mb-1 h6 text-primary">Megan shan</h6>
+                                                <small class="text-muted">4 days ago</small>
+                                            </div>
+                                            <p class="mb-1 notice-st text-secondary">Maecenas sed diam eget risus varius blandit.                                            
+                                            </p>
+                                            <!-- <small>Donec id elit non mi porta.</small> -->
+                                    </a>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="ibox">                            
+                            <div class="ibox-head">
+                                <div class="ibox-title">Recent Activities</div>
+                            </div> 
+                            <div class="ibox-body">
+                                <div class="list-group">
+                                    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+                                        <div class="d-flex w-100 justify-content-between">
+                                            <small class="text-muted">3 minute ago</small>
+                                        </div>
+                                        <p class="mb-1 notice-st text-dark">Maecenas sed diam eget risus varius blandit.                  
+                                        </p>
+                                    </a>
+
+                                    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+                                            <div class="d-flex w-100 justify-content-between">
+                                                <small class="text-muted">10 minute ago</small>
+                                            </div>
+                                            <p class="mb-1 notice-st text-dark">Maecenas sed diam eget risus varius blandit.                  
+                                            </p>
+                                    </a> 
+
+                                    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+                                            <div class="d-flex w-100 justify-content-between">
+                                                <small class="text-muted">12 minute ago</small>
+                                            </div>
+                                            <p class="mb-1 notice-st text-dark">Maecenas sed diam eget risus varius blandit.                  
+                                            </p>
+                                    </a>     
+                                </div>
+                            </div>                           
+                        </div>
+                    </div>
+                </div>                    
             </div>
     </div>
     
