--- a/src/app/layouts/app-header/app-header.component.html
+++ b/src/app/layouts/app-header/app-header.component.html
@@ -10,7 +10,7 @@
         </span> -->
     </a>
 
-    <a class="nav-link sidebar-toggler js-sidebar-toggler">
+    <a class="nav-link sidebar-toggler js-sidebar-toggler float-right">
         <i class="ti-menu"></i>
     </a>
 </div>
