--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,57 +1,57 @@
 <div class="page-content fade-in-up">
     <div class="row">
         <div class="col-lg-3 col-md-6">
-            <div class="row ibox text-dark widget-stat ml-3 mt-2 bg-info">
+            <div class="row ibox text-dark widget-stat ml-3 mt-2 p-3 no-gutters align-center">
                 <div class="col-md-6 text-center">
                     <i class="fa fa-birthday-cake dashboard-icon" aria-hidden="true"></i>
-                    <p class="font-size-02">Students Birthday</p>
+                    <p class="font-size-02 mb-0">Students Birthday</p>
                 </div>
                 <div class="col-md-6 text-center font-size-01">
-                    <p>1,000</p>
+                    <p class="mb-0">1,000</p>
                 </div>
             </div>
         </div>
         <div class="col-lg-3 col-md-6">
-            <div class="row ibox text-dark widget-stat ml-3 mt-2 bg-info">
+            <div class="row ibox text-dark widget-stat ml-3 mt-2 p-3 no-gutters align-center">
                 <div class="col-md-6 text-center">
                     <i class="fa fa-file-text-o dashboard-icon" aria-hidden="true"></i>
-                    <p class="font-size-02">Leave Details</p>
+                    <p class="font-size-02 mb-0">Leave Details</p>
                 </div>
                 <div class="col-md-6 text-center font-size-01">
-                    <p>09</p>
+                    <p class="mb-0">09</p>
                 </div>
             </div>
         </div>
         <div class="col-lg-3 col-md-6">
-            <div class="row ibox text-dark widget-stat ml-3 mt-2">
+            <div class="row ibox text-dark widget-stat ml-3 mt-2 p-3 no-gutters align-center">
                 <div class="col-md-6 text-center">
                     <i class="fa fa-birthday-cake dashboard-icon" aria-hidden="true"></i>
-                    <p class="font-size-02">Users Birthday</p>
+                    <p class="font-size-02 mb-0">Users Birthday</p>
                 </div>
                 <div class="col-md-6 text-center font-size-01">
-                    <p>150</p>
+                    <p class="mb-0">150</p>
                 </div>
             </div>
         </div>
         <div class="col-lg-3 col-md-6">
-            <div class="row ibox text-dark widget-stat ml-3 mt-2">
+            <div class="row ibox text-dark widget-stat ml-3 mt-2 p-3 no-gutters align-center">
                 <div class="col-md-6 text-center">
                     <i class="fa fa-calendar dashboard-icon" aria-hidden="true"></i>
-                    <p class="font-size-02">Today's Events</p>
+                    <p class="font-size-02 mb-0">Today's Events</p>
                 </div>
                 <div class="col-md-6 text-center font-size-01">
-                    <p>05</p>
+                    <p class="mb-0">05</p>
                 </div>
             </div>
         </div>
         <div class="col-lg-3 col-md-6">
-                <div class="row ibox text-dark widget-stat ml-3 mt-2">
+                <div class="row ibox text-dark widget-stat ml-3 mt-2 p-3 no-gutters align-center">
                     <div class="col-md-6 text-center">
                         <i class="fa fa-money dashboard-icon" aria-hidden="true"></i>
-                        <p class="font-size-02">Fee Details</p>
+                        <p class="font-size-02 mb-0">Fee Details</p>
                     </div>
                     <div class="col-md-6 text-center font-size-01">
-                        <p>$300</p>
+                        <p class="mb-0">$300</p>
                     </div>
                 </div>
         </div>
@@ -61,8 +61,6 @@
 
 
     <div class="row">
-
-
 
         <div class="col-lg-6">
             <div class="ibox">
@@ -168,7 +166,7 @@
                                             <h6 class="mb-1 h6 text-primary">John Doe</h6>
                                             <small class="text-muted">3 days ago</small>
                                         </div>
-                                        <p class="mb-1 notice-st text-secondary">Maecenas sed diam eget risus varius blandit.                                            
+                                        <p class="mb-1 notice-st text-secondary font-size-02">Maecenas sed diam eget risus varius blandit.                                            
                                         </p>
                                         <!-- <small>Donec id elit non mi porta.</small> -->
                                     </a>
@@ -178,7 +176,7 @@
                                                 <h6 class="mb-1 h6 text-primary">Kelly Margret</h6>
                                                 <small class="text-muted">6 days ago</small>
                                             </div>
-                                            <p class="mb-1 notice-st text-secondary">Maecenas sed diam eget risus varius blandit.                                            
+                                            <p class="mb-1 notice-st text-secondary font-size-02">Maecenas sed diam eget risus varius blandit.                                            
                                             </p>
                                             <!-- <small>Donec id elit non mi porta.</small> -->
                                     </a>
@@ -188,7 +186,7 @@
                                                 <h6 class="mb-1 h6 text-primary">Megan shan</h6>
                                                 <small class="text-muted">4 days ago</small>
                                             </div>
-                                            <p class="mb-1 notice-st text-secondary">Maecenas sed diam eget risus varius blandit.                                            
+                                            <p class="mb-1 notice-st text-secondary font-size-02">Maecenas sed diam eget risus varius blandit.                                            
                                             </p>
                                             <!-- <small>Donec id elit non mi porta.</small> -->
                                     </a>
@@ -203,12 +201,12 @@
                                 <div class="ibox-title">Recent Activities</div>
                             </div> 
                             <div class="ibox-body">
-                                <div class="list-group">
+                                <div class="list-group list-activities">
                                     <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
                                         <div class="d-flex w-100 justify-content-between">
                                             <small class="text-muted">3 minute ago</small>
                                         </div>
-                                        <p class="mb-1 notice-st text-dark">Maecenas sed diam eget risus varius blandit.                  
+                                        <p class="mb-1 notice-st text-dark font-size-02">Maecenas sed diam eget risus varius blandit.                  
                                         </p>
                                     </a>
 
@@ -216,7 +214,7 @@
                                             <div class="d-flex w-100 justify-content-between">
                                                 <small class="text-muted">10 minute ago</small>
                                             </div>
-                                            <p class="mb-1 notice-st text-dark">Maecenas sed diam eget risus varius blandit.                  
+                                            <p class="mb-1 notice-st text-dark font-size-02">Maecenas sed diam eget risus varius blandit.                  
                                             </p>
                                     </a> 
 
@@ -224,7 +222,7 @@
                                             <div class="d-flex w-100 justify-content-between">
                                                 <small class="text-muted">12 minute ago</small>
                                             </div>
-                                            <p class="mb-1 notice-st text-dark">Maecenas sed diam eget risus varius blandit.                  
+                                            <p class="mb-1 notice-st text-dark font-size-02">Maecenas sed diam eget risus varius blandit.                  
                                             </p>
                                     </a>     
                                 </div>
