--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -2,7 +2,8 @@
 	display: flex; 
 	align-items: center; 
 	justify-content: center; 
-	height: 100%;  
+	height: 100vh;
+	width: 100%;  
 	background: url('../../../assets/img/login-back.jpg') no-repeat; 
 	background-position: center; 
 	background-size: cover;
@@ -14,7 +15,7 @@
 }
 
 .content {
-	max-width: 400px;
+	max-width: 100%;
 	margin:0 auto;
 }
 .content form {
