--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -145,7 +145,8 @@
                         </div>
                         <div class="ibox-body">
                             <div class="w-100">                  
-                                <ngb-datepicker #dp [(ngModel)]="model" (navigate)="date = $event.next" [displayMonths]="displayMonths" [navigation] = "arrows"></ngb-datepicker>
+                                <ngb-datepicker #dp [(ngModel)]="model" (navigate)="date = $event.next" [displayMonths]="displayMonths" [navigation] = "arrows">                                    
+                                </ngb-datepicker>
                             </div>
                         </div>                       
                     </div>
