--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -19,7 +19,7 @@
 
         <li routerLinkActive="active">
             <a href="javascript:;" aria-expanded="false">
-                <i class="sidebar-item-icon fa fa-bookmark"></i>
+                <i class="sidebar-item-icon fa fa-bookmark"></i>ti-save
                 <span class="nav-label">Enrollment</span>
                 <i class="fa fa-angle-right arrow"></i>
             </a>
