student add form

--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -26,7 +26,7 @@
             </a>
             <ul class="nav-2-level collapse" routerLinkActive="in" aria-expanded="false">
                 <li>
-                    <a routerLink="" routerLinkActive="active">
+                    <a [routerLink]="['/students/add']" routerLinkActive="active">
                         <span class="submenu-arrow"><i class="ti-angle-right"></i></span>
                         Student Admission
                     </a>
