--- a/src/app/pages/students/add-student/add-student.component.html
+++ b/src/app/pages/students/add-student/add-student.component.html
@@ -20,57 +20,57 @@
                         <h6 class="h6 font-weight-bold">Student Information</h6>
                     </div>
                     <div class="col-sm-3 form-group">
-                        <label>First Name</label>
-                        <input class="form-control" type="text" placeholder="First Name">
+                        <label>First Name *</label>
+                        <input class="form-control" type="text" placeholder="First Name" name="firstName" formControlName="firstName">
                     </div>
                     <div class="col-sm-3 form-group">
                         <label>Middle Name</label>
-                        <input class="form-control" type="text" placeholder="Middle Name">
+                        <input class="form-control" type="text" placeholder="Middle Name" name="middleName" formControlName="middleName">
                     </div>
                     <div class="col-sm-3 form-group">
-                        <label>Last Name</label>
-                        <input class="form-control" type="text" placeholder="Last Name">
+                        <label>Last Name *</label>
+                        <input class="form-control" type="text" placeholder="Last Name" name="lastName" formControlName="lastName">
                     </div>
                     <div class="col-sm-3 form-group">
-                        <label>Aadhar Number</label>
-                        <input class="form-control" type="number" placeholder="Aadhar">
+                        <label>Aadhar Number *</label>
+                        <input class="form-control" type="number" placeholder="Aadhar" name="aadharNo" formControlName="aadharNo">
                     </div>
                     <div class="col-sm-3 form-group">
                         <label>Contact Number</label>
-                        <input class="form-control" type="number" placeholder="Phone">
+                        <input class="form-control" type="number" placeholder="Phone" name="mobileNo" formControlName="mobileNo">
                     </div>
                     <div class="col-sm-3 form-group">
-                        <label>Date of Birth</label>
-                        <input class="form-control" type="date" placeholder="DOB">
+                        <label>Date of Birth *</label>
+                        <input class="form-control" type="date" placeholder="DOB" name="date_of_birth" formControlName="date_of_birth">
                     </div>
                     <div class="col-sm-3 form-group">
                         <label>Blood Group</label>
-                        <select class="form-control">
-                          <option value="">Select</option>
+                        <select class="form-control" name="bloodGroup" formControlName="bloodGroup">
+                          <option value="">--Select--</option>
                           <option value="b+">B+</option>
                           <option value="o+">O+</option>
                         </select>    
                     </div>
                     <div class="col-sm-3 form-group">
                         <label>Gender</label>
-                        <select class="form-control">
-                            <option value="">Select</option>
+                        <select class="form-control" name="gender" formControlName="gender">
+                            <option value="">--Select--</option>
                             <option value="male">Male</option>
                             <option value="female">Female</option>
                         </select>
                     </div>
                     <div class="col-sm-3 form-group">
                         <label>Contact Preference</label>
-                        <select class="form-control">
-                            <option value="">Select</option>
-                            <option value="">Option 1</option>
-                            <option value="">Option 2</option>
+                        <select class="form-control" name="preference" formControlName="preference">
+                            <option value="">--Select--</option>
+                            <option value="1">Option 1</option>
+                            <option value="2">Option 2</option>
                         </select>
                     </div>
                     <div class="col-sm-3 form-group">
                         <label>Religion</label>
-                        <select class="form-control">
-                            <option value="">Select</option>
+                        <select class="form-control" name="religion" formControlName="religion">
+                            <option value="">--Select--</option>
                             <option value="hindu">Hindu</option>
                             <option value="muslim">Muslim</option>
                             <option value="christian">Christian</option> 
@@ -81,9 +81,9 @@
                         </select>
                     </div>
                     <div class="col-sm-3 form-group">
-                        <label>Cast</label>
-                        <select class="form-control">
-                            <option value="">Select</option>
+                        <label>Caste</label>
+                        <select class="form-control" name="caste" formControlName="caste">
+                            <option value="">--Select--</option>
                             <option value="general">General</option>
                             <option value="sc">SC</option>
                             <option value="st">ST</option>
@@ -93,20 +93,25 @@
 
                     <div class="col-sm-3 form-group">
                         <label>Nationality</label>
-                        <select class="form-control">
+                        <select class="form-control" name="nationality" formControlName="nationality">
                             <option value="">--Select--</option>
                             <option value="indian">Indian</option>
                         </select>
                     </div>
 
                     <div class="col-sm-3 form-group">
-                        <label>Select Academic</label>
-                        <select class="form-control">
-                            <option value="">Select</option>
+                        <label>Profile Picture</label>
+                        <input type="file" class="form-control" name="studentProfPicEncoded" formControlName="studentProfPicEncoded"/>
+                    </div>
+
+                    <!-- <div class="col-sm-3 form-group">
+                        <label>Select Academic *</label>
+                        <select class="form-control" name="">
+                            <option value="">--Select--</option>
                             <option value="">Option 1</option>
                             <option value="">Option 2</option>
                         </select>
-                    </div>                    
+                    </div>                     -->
                 </div>
 
                 <br/>
@@ -118,77 +123,77 @@
 
                     <div class="col-sm-3 form-group">
                         <label>Father's First Name</label>
-                        <input class="form-control" type="text" placeholder="Father's First Name">
+                        <input class="form-control" type="text" placeholder="Father's First Name" name="fatherFName" formControlName="fatherFName">
                     </div>
 
                     <div class="col-sm-3 form-group">
                         <label>Father's Middle Name</label>
-                        <input class="form-control" type="text" placeholder="Father's Middle Name">
+                        <input class="form-control" type="text" placeholder="Father's Middle Name" name="fatherMName" formControlName="fatherMName">
                     </div>
 
                     <div class="col-sm-3 form-group">
                         <label>Father's Last Name</label>
-                        <input class="form-control" type="text" placeholder="Father's Last Name">
+                        <input class="form-control" type="text" placeholder="Father's Last Name" name="fatherLName" formControlName="fatherLName">
                     </div>
 
                     <div class="col-sm-3 form-group">
                         <label>Mother's First Name</label>
-                        <input class="form-control" type="text" placeholder="Mother's First Name">
+                        <input class="form-control" type="text" placeholder="Mother's First Name" name="motherFName" formControlName="motherFName">
                     </div>
 
                     <div class="col-sm-3 form-group">
                         <label>Mother's Middle Name</label>
-                        <input class="form-control" type="text" placeholder="Mother's Middle Name">
+                        <input class="form-control" type="text" placeholder="Mother's Middle Name" name="motherMName" formControlName="motherMName">
                     </div>
 
                     <div class="col-sm-3 form-group">
                         <label>Mother's Last Name</label>
-                        <input class="form-control" type="text" placeholder="Mother's Last Name">
+                        <input class="form-control" type="text" placeholder="Mother's Last Name" name="motherLName" formControlName="motherLName">
                     </div>
 
                     <div class="col-sm-3 form-group">
                         <label>Guardian's First Name</label>
-                        <input class="form-control" type="text" placeholder="Guardian's First Name">
+                        <input class="form-control" type="text" placeholder="Guardian's First Name" name="guardianFName" formControlName="guardianFName">
                     </div>
 
                     <div class="col-sm-3 form-group">
                         <label>Guardian's Middle Name</label>
-                        <input class="form-control" type="text" placeholder="Guardian's Middle Name">
+                        <input class="form-control" type="text" placeholder="Guardian's Middle Name" name="guardianMName" formControlName="guardianMName">
                     </div>
 
                     <div class="col-sm-3 form-group">
                         <label>Guardian's Last Name</label>
-                        <input class="form-control" type="text" placeholder="Guardian's Last Name">
+                        <input class="form-control" type="text" placeholder="Guardian's Last Name" name="guardianLName" formControlName="guardianLName">
                     </div>
 
                     <div class="col-sm-3 form-group">
                         <label>Father's Mobile Number</label>
-                        <input class="form-control" type="number" placeholder="Father's Mobile">
+                        <input class="form-control" type="number" placeholder="Father's Mobile" name="fatherMobileNo" formControlName="fatherMobileNo">
                     </div>
 
                     <div class="col-sm-3 form-group">
                         <label>Mother's Mobile Number</label>
-                        <input class="form-control" type="number" placeholder="Mother's Mobile">
+                        <input class="form-control" type="number" placeholder="Mother's Mobile" name="motherMobileNo" formControlName="motherMobileNo">
                     </div>
 
                     <div class="col-sm-3 form-group">
                         <label>Guardian's Mobile Number</label>
-                        <input class="form-control" type="number" placeholder="Guardian's Mobile">
+                        <input class="form-control" type="number" placeholder="Guardian's Mobile" name="guardianMobileNo" formControlName="guardianMobileNo">
                     </div>
 
                     <div class="col-sm-3 form-group">
                         <label>Father's Email Id</label>
-                        <input class="form-control" type="email" placeholder="Father's Email">
+                        <input class="form-control" type="email" placeholder="Father's Email" name="fatherEmailID" formControlName="fatherEmailID">
                     </div>
 
                     <div class="col-sm-3 form-group">
                         <label>Mother's Email Id</label>
-                        <input class="form-control" type="email" placeholder="Mother's Email">
+                        <input class="form-control" type="email" placeholder="Mother's Email" name="motherEmailID" formControlName="motherEmailID">
                     </div>
 
                     <div class="col-sm-3 form-group">
                         <label>Guardian's Email Id</label>
-                        <input class="form-control" type="email" placeholder="Guardian's Email">
+                        <input class="form-control" type="email" placeholder="Guardian's Email" name="guardianEmailID" formControlName="guardianEmailID">
                     </div>
                 </div>
 
@@ -201,65 +206,65 @@
 
                     <div class="col-sm-3 form-group">
                         <label>Medium of Instruction</label>
-                        <select class="form-control">
-                            <option value="">Select</option>
-                            <option value="">Option 1</option>
-                            <option value="">Option 2</option>
+                        <select class="form-control" name="mediumOfInstruction" formControlName="mediumOfInstruction">
+                            <option value="">--Select--</option>
+                            <option value="1">Option 1</option>
+                            <option value="2">Option 2</option>
                         </select>
                     </div>
 
                     <div class="col-sm-3 form-group">
-                        <label>Admission Number</label>
-                        <input class="form-control" type="text" placeholder="Admission Number">
+                        <label>Admission Number *</label>
+                        <input class="form-control" type="text" placeholder="Admission Number" name="admissionNo" formControlName="admissionNo">
                     </div>
 
                     <div class="col-sm-3 form-group">
                         <label>Admission Date</label>
-                        <input class="form-control" type="date" placeholder="Admission Date">
+                        <input class="form-control" type="date" placeholder="Admission Date" name="admissionDate" formControlName="admissionDate">
                     </div>
 
                     <div class="col-sm-3 form-group">
                         <label>Stream / Group *</label>
-                        <select class="form-control">
-                            <option value="">Select</option>
-                            <option value="">Option 1</option>
-                            <option value="">Option 2</option>
+                        <select class="form-control" name="streamID" formControlName="streamID">
+                            <option value="">--Select--</option>
+                            <option value="1">Option 1</option>
+                            <option value="2">Option 2</option>
                         </select>
                     </div>
 
                     <div class="col-sm-3 form-group">
-                        <label>Class</label>
-                        <select class="form-control">
-                            <option value="">Select</option>
-                            <option value="">Option 1</option>
-                            <option value="">Option 2</option>
+                        <label>Class *</label>
+                        <select class="form-control" name="classID" formControlName="classID">
+                            <option value="">--Select--</option>
+                            <option value="1">Option 1</option>
+                            <option value="2">Option 2</option>
                         </select>
                     </div>
 
                     <div class="col-sm-3 form-group">
-                        <label>Section</label>
-                        <select class="form-control">
-                            <option value="">Select</option>
-                            <option value="">Option 1</option>
-                            <option value="">Option 2</option>
+                        <label>Section *</label>
+                        <select class="form-control" name="sectionID" formControlName="sectionID">
+                            <option value="">--Select--</option>
+                            <option value="1">Option 1</option>
+                            <option value="2">Option 2</option>
                         </select>
                     </div>
 
                     <div class="col-sm-3 form-group">
-                        <label>Free Quota</label>
-                        <select class="form-control">
-                            <option value="">Select</option>
-                            <option value="">Option 1</option>
-                            <option value="">Option 2</option>
+                        <label>Fee Quota</label>
+                        <select class="form-control" name="feeQuota" formControlName="feeQuota">
+                            <option value="">--Select--</option>
+                            <option value="1">Option 1</option>
+                            <option value="2">Option 2</option>
                         </select>
                     </div>
 
                     <div class="col-sm-3 form-group">
                         <label>Bus Route *</label>
-                        <select class="form-control">
-                            <option value="">Select</option>
-                            <option value="">Option 1</option>
-                            <option value="">Option 2</option>
+                        <select class="form-control" name="routeID" formControlName="routeID">
+                            <option value="">--Select--</option>
+                            <option value="1">Option 1</option>
+                            <option value="2">Option 2</option>
                         </select>
                     </div>
                 </div>
