student list done

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3571,7 +3571,8 @@ table.dataTable {
   width: 170px;
   -webkit-border-radius: 50px;
   border-radius: 50px;
-  color: #333; }
+  color: #333; 
+}
 
 .dev-img {
   position: absolute;
