--- a/src/app/pages/students/student-list/student-list.component.html
+++ b/src/app/pages/students/student-list/student-list.component.html
@@ -59,7 +59,7 @@
                     </ng-template>
                 </ngx-datatable-column>
                 <ngx-datatable-column name="Name" [width]="50"></ngx-datatable-column>
-                <ngx-datatable-column name="Gender" [width]="70">
+                <ngx-datatable-column name="Gender" [width]="55">
                   <!-- <ng-template let-row="row" ngx-datatable-cell-template>
                     <div class="border-checkbox-group border-checkbox-group-default">
                       <input class="border-checkbox" type="checkbox" id="checkbox0">
@@ -67,13 +67,13 @@
                     </div>
                   </ng-template> -->
                 </ngx-datatable-column>
-                <ngx-datatable-column name="Parents Name">
+                <ngx-datatable-column name="Parents Name" [width]="100">
                     <ng-template let-row="row" ngx-datatable-cell-template>
                         Justin Mary
                     </ng-template>
                 </ngx-datatable-column>
                 <ngx-datatable-column name="Class" [width]="50"></ngx-datatable-column>
-                <ngx-datatable-column name="Section" [width]="70"></ngx-datatable-column>
+                <ngx-datatable-column name="Section" [width]="50"></ngx-datatable-column>
                 <ngx-datatable-column name="Address">
                     <ng-template let-row="row" ngx-datatable-cell-template>
                         NL-59, South Park
