--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -96,7 +96,7 @@
                     </a>
                 </div>
           </div>
-          <div class="mt-3">
+          <div class="ibox-body mt-3">
             <canvas id="collection_chart" style="height:250px;"></canvas>
           </div>
         </div>
@@ -140,7 +140,7 @@
                     </a>
                 </div>
           </div>
-          <div class="mt-3">
+          <div class="ibox-body mt-3">
             <canvas id="student_chart" style="height:250px;"></canvas>
           </div>
         </div>
