--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -90,10 +90,10 @@
           <div class="ibox-head">
             <div class="ibox-title">Fees Collection & Expenses</div>
             <div class="ibox-tools">
-                    <a class="ibox-collapse">
+                    <!-- <a class="ibox-collapse">
                         <i class="fa fa-refresh mr-1 text-success refresh-icon" aria-hidden="true"></i>
                         <i class="fa fa-times text-danger close-icon" aria-hidden="true"></i>
-                    </a>
+                    </a> -->
                 </div>
           </div>
           <div class="ibox-body mt-3">
@@ -134,14 +134,16 @@
           <div class="ibox-head">
             <div class="ibox-title">Students Chart</div>
             <div class="ibox-tools">
-                    <a class="ibox-collapse">
+                    <!-- <a class="ibox-collapse">
                         <i class="fa fa-refresh mr-1 text-success refresh-icon" aria-hidden="true"></i>
                         <i class="fa fa-times text-danger close-icon" aria-hidden="true"></i>
-                    </a>
+                    </a> -->
                 </div>
           </div>
-          <div class="ibox-body mt-3">
-            <canvas id="student_chart" style="height:250px;"></canvas>
+          <div class="ibox-body">
+            <div class="mt-3">
+                <canvas id="student_chart" style="height:250px;"></canvas>
+            </div>
           </div>
         </div>
       </div>
