--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -96,14 +96,15 @@
                     </a> -->
                 </div>
           </div>
-          
+
           <div class="ibox-body">
             <div class="mt-3">
                 <canvas id="student_chart" style="height:250px;"></canvas>
             </div>
           </div>
+
         </div>
-      </div>
+      <!-- </div> -->
     </div>
 
 
