Widget data dynamic

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,7 +7,7 @@
           <p class="font-size-02 mb-0">Students Birthday</p>
         </div>
         <div class="col-md-6 text-center font-size-01">
-          <p class="mb-0">1,000</p>
+          <p class="mb-0">{{stdntbthdy}}</p>
         </div>
       </div>
     </div>
@@ -18,7 +18,7 @@
           <p class="font-size-02 mb-0">Leave Details</p>
         </div>
         <div class="col-md-6 text-center font-size-01">
-          <p class="mb-0">09</p>
+          <p class="mb-0">{{leavCount}}</p>
         </div>
       </div>
     </div>
@@ -29,7 +29,7 @@
           <p class="font-size-02 mb-0">Users Birthday</p>
         </div>
         <div class="col-md-6 text-center font-size-01">
-          <p class="mb-0">150</p>
+          <p class="mb-0">{{userBdayList}}</p>
         </div>
       </div>
     </div>
@@ -40,7 +40,7 @@
           <p class="font-size-02 mb-0">Today's Events</p>
         </div>
         <div class="col-md-6 text-center font-size-01">
-          <p class="mb-0">05</p>
+          <p class="mb-0">{{eventList}}</p>
         </div>
       </div>
     </div>
@@ -51,7 +51,7 @@
           <p class="font-size-02 mb-0">Fee Details</p>
         </div>
         <div class="col-md-6 text-center font-size-01">
-          <p class="mb-0">$300</p>
+          <p class="mb-0">${{feesList}}</p>
         </div>
       </div>
     </div>
